<resources>
    <string name="app_name">My Application</string>
    <string name="open_activity_2">open activity 2</string>
    <string name="carpooling">Carpooling</string>
    <string name="start">START</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="button_one">BUTTON ONE</string>
    <string name="button_two">button_two</string>
    <string name="button1">Button1</string>
    <string name="button">Button</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user">USER</string>
    <string name="password">PASSWORD</string>
    <string name="tec">TEC</string>
    <string name="dulce_nombre">Dulce Nombre</string>
    <string name="paraiso">Paraiso</string>
    <string name="occidental">Occidental</string>
    <string name="oriental">Oriental</string>
    <string name="el_tejar">El Tejar</string>
    <string name="el_guarco">El Guarco</string>
    <string name="tierra_blanca">Tierra Blanca</string>
    <string name="carmen">Carmen</string>
    <string name="guadalupe">Guadalupe</string>
    <string name="san_nicolas">San Nicolas</string>
    <string name="agua_caliente">Agua Caliente</string>
    <string name="turrialba">Turrialba</string>
    <string name="tucurrique">Tucurrique</string>
    <string name="concepcion">Concepcion</string>
    <string name="san_rafael">San Rafael</string>
    <string name="cot">Cot</string>
    <string name="pacayas">Pacayas</string>
    <string name="cervantes">Cervantes</string>
    <string name="pejibaye">Pejibaye</string>
    <string name="facebook_login_protocol_scheme">fb2127759580886195</string>
    <string name="facebook_app_id">2127759580886195</string>
    <string name="califica">Califica al Driver</string>
</resources>
